# delphi-42

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.dev.yaml  compose.pi.yaml  compose.yaml  pyproject.toml
bot/: __init__.py  command_parser.py  dev_console.py  message_router.py  oracle_bot.py  radio_interface.py
config/: oracle.dev.yaml  oracle.example.yaml  oracle.mac.live.yaml  oracle.mac.sim.yaml  oracle.pi.yaml  oracle.ubuntu.ovms.live.yaml  oracle.ubuntu.ovms.sim.yaml
core/: __init__.py  command.py  intent.py  llm_runner.py  oracle_service.py  prompt_builder.py  reply_formatter.py  retriever.py  runtime_config.py  zim_retriever.py
docs/: README.md
docs/ai/: corpus_strategy.md  evaluation_plan.md  ingestion_and_indexing.md  retrieval_and_response_policy.md
docs/architecture/: interfaces_and_config.md  runtime_flows.md  software_architecture.md  system_context.md
docs/hardware/: assembly_and_field_packaging.md  bill_of_materials.md  node_topology.md  power_thermal_and_enclosure.md
docs/operations/: agentic_oracle_sop.md  backup_recovery_and_upgrade.md  container_workflows.md  deployment_runbook.md  incident_response.md  mac_m1_pro_quickstart.md  raspberry_pi_provisioning.md  service_operations.md  ubuntu_sigma_ovms_quickstart.md
docs/overview/: glossary.md  non_functional_requirements.md  project_brief.md  scope_and_non_goals.md  user_journeys.md
docs/project/: contributing.md  documentation_governance.md  execution_plan.md  risk_register.md
docs/sops/: agentic_ai.md
docs/testing/: field_acceptance_protocol.md  release_readiness.md  requirements_traceability.md  test_matrix.md  test_strategy.md
ingest/: __init__.py  build_index.py  chunker.py  extract_zim.py  html_normalizer.py  zim_extract.py
sample_data/: README.md
scripts/: bootstrap_ubuntu_ovms.py  bootstrap_ubuntu_ovms.sh  check_docs.py  host_preflight.py  inspect_retrieval.py  mac_preflight.py  manage_zims.py  mock_openai_api.py
systemd/: oracle-bot.service  oracle-core.service
tests/: test_bootstrap_ubuntu_ovms.py  test_chunker.py  test_command_parser.py  test_dev_console.py  test_docs.py  test_html_normalizer.py  test_inspect_retrieval.py  test_llm_runner.py  test_mac_preflight.py  test_manage_zims.py  test_message_router.py  test_mock_openai_api.py  test_oracle_bot.py  test_oracle_service.py  test_radio_interface.py  test_reply_formatter.py  test_retriever.py  test_runtime_config.py  test_zim_extract.py  test_zim_retriever.py
(+9 files in other folders)
