[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delphi-42"
version = "0.1.0"
description = "Offline Meshtastic oracle node for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
bot = [
  "meshtastic",
]
llm = [
  "openai>=1.30.0",
]
zim = [
  "libzim>=3.5",
]

[project.scripts]
delphi-bot = "bot.oracle_bot:main"
delphi-dev-console = "bot.dev_console:main"
delphi-mac-preflight = "scripts.mac_preflight:main"
delphi-build-index = "ingest.build_index:main"
delphi-extract-zim = "ingest.extract_zim:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot", "bot.*", "core", "core.*", "ingest", "ingest.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
