[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delphi-42"
version = "0.1.0"
description = "Offline Meshtastic oracle node for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12.0",
  "strip-tags>=0.6",
]

[project.optional-dependencies]
bot = [
  "meshtastic",
]
llm = [
  "openai>=1.30.0",
  "llm>=0.26",
  "llm-tools-kiwix>=0.1",
]
zim = [
  "libzim>=3.5",
]

[project.scripts]
delphi-bot = "bot.oracle_bot:main"
delphi-dev-console = "bot.dev_console:main"
delphi-mac-preflight = "scripts.mac_preflight:main"
delphi-manage-zims = "scripts.manage_zims:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot", "bot.*", "core", "core.*", "ingest", "ingest.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
